<resources>
    <string name="app_name">Laboratorium 2</string>
    <string name="start_service">start_service</string>
    <string name="pause_service">pause_service</string>
    <string name="stop_service">stop_service</string>
    <string name="linearlayout">LinearLayout</string>
    <string name="arrow">➜</string>
    <string name="arrowleft">❮</string>
    <string name="arrowright">❯</string>
    <string name="tablelayout">TableLayout</string>
    <string name="rodek">Środek</string>
    <string name="relativelayout">RelativeLayout</string>
    <string name="_1_3">1/3</string>
</resources>